--- a/src/app/event-details/event-details.html
+++ b/src/app/event-details/event-details.html
@@ -22,7 +22,7 @@
             <label for="event-tags">Event Tags</label>
             <input id="event-tags" type="text" formControlName="eventTags" />
         </div>
-        <button type="submit" class="primary">Save Details</button>
+        <button type="submit" class="save-button primary">Save</button>
     </form>
     </section>
 </article>
