--- a/src/app/location-details/location-details.html
+++ b/src/app/location-details/location-details.html
@@ -5,20 +5,20 @@
     <section class="edit-location-form">
     <form [formGroup]="applyForm" (submit)="submitApplication()">
         <div>
-        <label for="location-title">Location Title</label>
-        <input id="location-title" type="text" formControlName="locationTitle" />
+            <label for="location-title">Location Title</label>
+            <input id="location-title" type="text" formControlName="locationTitle" />
         </div>
-        <label for="location-description">Location Description</label>
-        <textarea id="location-description" formControlName="locationDescription"></textarea>
+            <label for="location-description">Location Description</label>
+            <textarea id="location-description" formControlName="locationDescription"></textarea>
         <div>
-        <label for="location-characters">Location Characters</label>
-        <input id="location-characters" type="text" formControlName="locationCharacters" />
-        <label for="location-stories">Location Stories</label>
-        <input id="location-stories" type="text" formControlName="locationStories" />
-        <label for="location-tags">Location Tags</label>
-        <input id="location-tags" type="text" formControlName="locationTags" />
+            <label for="location-characters">Location Characters</label>
+            <input id="location-characters" type="text" formControlName="locationCharacters" />
+            <label for="location-stories">Location Stories</label>
+            <input id="location-stories" type="text" formControlName="locationStories" />
+            <label for="location-tags">Location Tags</label>
+            <input id="location-tags" type="text" formControlName="locationTags" />
         </div>
-        <button type="submit" class="primary">Save Details</button>
+        <button type="submit" class="save-button primary">Save</button>
     </form>
     </section>
 </article>
