--- a/src/app/home/world-character/world-character.html
+++ b/src/app/home/world-character/world-character.html
@@ -2,7 +2,8 @@
     <div class="thumbnail-header">
         <h4 class="thumbnail-title">{{ worldCharacter().firstName }} {{ worldCharacter().lastName }}</h4>
         <button class="thumbnail-delete-button" (click)="deleteCharacter(worldCharacter().id, $event)">Delete</button>
-    </div>    <p class="thumbnail-alt-names">{{ worldCharacter().altNames.join(', ') }}</p>
+    </div>
+    <p class="thumbnail-alt-names">{{ worldCharacter().altNames.join(', ') }}</p>
     <p class="thumbnail-pronouns">{{ worldCharacter().pronouns }}</p>
     <div class="thumbnail-tag-container">
     @for (tag of worldCharacter().tags; track tag) {
