--- a/src/styles.css
+++ b/src/styles.css
@@ -61,7 +61,7 @@ h1 {
 }
 
 h2 {
-  margin-top: 20px;
+  margin-top: 10px;
   /* margin-bottom: 10px; */
 }
 
@@ -75,24 +75,22 @@ h2 {
 /* ============================================================================
    BUTTON STYLES
    ============================================================================ */
-button.primary {
-  padding: 10px;
-  border: solid 1px var(--primary-color);
-  background: var(--primary-color);
-  color: white;
+button{
   border-radius: 8px;
-}
+  padding: 5px;
 
-.home-row-title button.primary{
-  background-color: var(--g3-color);
-  color: var(--g5-color);
-  transition: background-color 0.5s ease-in-out;
-  transition: box-shadow 0.5s ease-in-out;
-
-  &:hover {
-    background-color: var(--g2-color);
-    box-shadow: var(--shadow-color) 2px 2px 10px;
+  .primary {
+    border: solid 1px var(--primary-color);
+    background: var(--primary-color);
+    color: white;
   }
+
+  .secondary {
+    border: solid 1px var(--secondary-color);
+    background: var(--secondary-color);
+    color: white;
+  }
+
 }
 
 .details-button {
@@ -186,7 +184,9 @@ textarea {
    ============================================================================ */
 /* Scrollbar width */
 ::-webkit-scrollbar {
+  background: transparent;
   width: 10px;
+  height: 10px;
 }
 
 /* Scrollbar track */
@@ -207,118 +207,8 @@ textarea {
 }
 
 /* ============================================================================
-   ICON STYLES (Before Pseudo-elements)
-   ============================================================================ */
-
-.world-location::before {
-  content: '📍';
-  display: inline-block;
-  width: 16px;
-  height: 16px;
-  margin-right: 2px;
-  vertical-align: middle;
-}
-
-.world-characters::before {
-  content: '👥';
-  display: inline-block;
-  width: 16px;
-  height: 16px;
-  margin-right: 2px;
-  vertical-align: middle;
-}
-
-.world-stories::before {
-  content: '📖';
-  display: inline-block;
-  width: 16px;
-  height: 16px;
-  margin-right: 2px;
-  vertical-align: middle;
-}
-
-.world-date::before {
-  content: '📅';
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.world-tags::before {
-  content: '🏷️';
-  display: inline-block;
-  width: 16px;
-  height: 16px;
-  margin-right: 2px;
-  vertical-align: middle;
-}
-
-/* ============================================================================
    CONTENT COMPONENTS
    ============================================================================ */
-.world-tags {
-  width: fit-content;
-  margin: 3px;
-  padding: 5px;
-  font-size: x-small;
-  color: var(--secondary-color);
-  border: 1px solid var(--primary-color);
-  border-radius: 10px;
-  transition: box-shadow 0.5s ease-in-out;
-}
-
-.world-tags:hover {
-  background: var(--accent-color);
-  box-shadow: 2px 2px 5px var(--shadow-color);
-}
-
-.world-description {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  font-size: small;
-  color: var(--g1-color);
-  line-height: 1.4;
-  white-space: normal;
-}
-
-.world-thumbnail {
-  background: var(--g4-color);
-  border-radius: 30px;
-  margin: 5px;
-  padding: 10px;
-  transition: box-shadow 0.5s ease-in-out;
-}
-
-.world-thumbnail:hover {
-  box-shadow: 2px 2px 15px var(--shadow-color);
-}
-
-.thumbnail-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.thumbnail-delete-button {
-  background: var(--b4-color);
-  color: var(--g5-color);
-  border: none;
-  border-radius: 8px;
-  padding: 5px;
-  margin-inline: 5px;
-  font-size: small;
-  transition: background 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
-
-  &:hover {
-    background: var(--b3-color);
-    box-shadow: var(--shadow-color) 2px 2px 10px;
-  }
-}
-
-.thumbnail-tag-container {
-  display: flex;
-  flex-wrap: wrap;
-}
-
 .save-button {
   margin-top: 10px;
   padding: 10px 15px;
@@ -388,9 +278,6 @@ textarea {
   grid-template-columns: 1fr 1fr;
   gap: 15px;
 }
-
-/* grid-template-columns: 1px 1px; */
-/* grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); */
 
 /* ===========================================================================
    UTILITY CLASSES
